#1380 Fix accessibility issues with zoom and text overlap (#1533)
* Fix zoom issues

* Fix class name mistake

--- a/src/themes/website/styles/utils.scss
+++ b/src/themes/website/styles/utils.scss
@@ -94,3 +94,11 @@
     overflow-y: auto;
     scroll-behavior: smooth;
 }
+
+.mw-60 {
+    min-width: 60px;
+}
+
+.mw-170 {
+    min-width: 170px;
+}
